[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
pretty_env_logger = "0.4.0"
log = "0.4.17"
futures = "0.3.21"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.11.10", features = [ "json" ] }
jsonpath = "0.1.1"

[dev-dependencies]
test-case = "2.0.0"
